--- a/css/cooperation.css
+++ b/css/cooperation.css
@@ -141,6 +141,12 @@ button {
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   z-index: 99;
 }
+@media screen and (max-width: 1100px) {
+  .header-links__wrapper {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
 
 .sticky {
   position: fixed;
@@ -148,11 +154,6 @@ button {
   width: 100%;
   transition: bottom 0.5s ease;
   z-index: 999;
-}
-@media screen and (max-width: 1024px) {
-  .sticky {
-    margin-top: 78px;
-  }
 }
 
 .header-links {
@@ -174,8 +175,8 @@ button {
 }
 @media screen and (max-width: 1100px) {
   .header-links .navigation-links {
-    display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: start;
   }
 }
 .header-links .navigation-links li {
@@ -277,6 +278,27 @@ button {
 .header-links .navigation-language img {
   margin-left: 5px;
   margin-right: 5px;
+}
+
+.open-menu {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  margin-top: 75px;
+  background-color: #ffffff;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.open-menu .navigation-links {
+  margin-left: 20px;
+}
+.open-menu .navigation-links li {
+  margin-top: 20px;
+}
+.open-menu .navigation-input input {
+  width: 200px;
 }
 
 .footer-wrapper {
@@ -546,7 +568,7 @@ button {
 }
 
 .cooperation-page__title {
-  margin-top: 100px;
+  margin-top: 40px;
   display: flex;
   align-items: flex-start;
   font-family: "Montserrat" sans-serif;
