--- a/css/diagnostics.css
+++ b/css/diagnostics.css
@@ -141,6 +141,12 @@ button {
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   z-index: 99;
 }
+@media screen and (max-width: 1100px) {
+  .header-links__wrapper {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
 
 .sticky {
   position: fixed;
@@ -148,11 +154,6 @@ button {
   width: 100%;
   transition: bottom 0.5s ease;
   z-index: 999;
-}
-@media screen and (max-width: 1024px) {
-  .sticky {
-    margin-top: 78px;
-  }
 }
 
 .header-links {
@@ -174,8 +175,8 @@ button {
 }
 @media screen and (max-width: 1100px) {
   .header-links .navigation-links {
-    display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: start;
   }
 }
 .header-links .navigation-links li {
@@ -277,6 +278,27 @@ button {
 .header-links .navigation-language img {
   margin-left: 5px;
   margin-right: 5px;
+}
+
+.open-menu {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  margin-top: 75px;
+  background-color: #ffffff;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.open-menu .navigation-links {
+  margin-left: 20px;
+}
+.open-menu .navigation-links li {
+  margin-top: 20px;
+}
+.open-menu .navigation-input input {
+  width: 200px;
 }
 
 .footer-wrapper {
@@ -546,12 +568,17 @@ button {
 }
 
 .diagnostics-page__title {
-  margin-top: 90px;
+  margin-top: 40px;
   display: flex;
   align-items: flex-start;
   font-family: "Montserrat" sans-serif;
   font-size: 16px;
   font-weight: 500;
+}
+@media screen and (max-width: 1024px) {
+  .diagnostics-page__title {
+    margin-top: 140px;
+  }
 }
 .diagnostics-page__title img {
   margin-right: 10px;
@@ -919,7 +946,7 @@ button {
   height: 20px;
   border-radius: 5px;
   background: #01a1b7;
-  transition: all 0.5s linear;
+  transition: all 0.3s linear;
 }
 @media screen and (max-width: 768px) {
   .accordion-header__icon .icon-plus .plus {
@@ -945,7 +972,7 @@ button {
   width: 90%;
   transition: 0.3s;
   height: 0;
-  transition: all 0.5s linear;
+  transition: all 0.4s linear;
 }
 @media screen and (max-width: 768px) {
   .accordion-content {
