--- a/scss/diagnostics.scss
+++ b/scss/diagnostics.scss
@@ -3,12 +3,16 @@
 @import "footer";
 
 .diagnostics-page__title {
-  margin-top: 90px;
+  margin-top: 40px;
   display: flex;
   align-items: flex-start;
   font-family: "Montserrat" sans-serif;
   font-size: 16px;
   font-weight: 500;
+
+  @media screen and (max-width: 1024px) {
+    margin-top: 140px;
+  }
 
   img {
     margin-right: 10px;
@@ -381,7 +385,7 @@
           height: 20px;
           border-radius: 5px;
           background: #01a1b7;
-          transition: all 0.5s linear;
+          transition: all 0.3s linear;
 
           @media screen and (max-width: 768px) {
             width: 3px;
@@ -410,7 +414,7 @@
     width: 90%;
     transition: 0.3s;
     height: 0;
-    transition: all 0.5s linear;
+    transition: all 0.4s linear;
 
     @media screen and (max-width: 768px) {
       width: 100%;
