--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -2,7 +2,6 @@
 @import "header";
 @import "footer";
 
-
 .main-wrapper {
   width: 100%;
   background-color: #01a1b7;
@@ -25,7 +24,7 @@
   }
 
   @media screen and (max-width: 500px) {
-    height: 500px;
+    height: fit-content;
   }
 
   &-content {
@@ -258,26 +257,17 @@
       }
       @media screen and (max-width: 500px) {
         width: 100%;
+        text-align: center;
       }
 
       a {
-        width: 100%;
         display: flex;
         align-items: center;
         justify-content: space-evenly;
-
-        @media screen and (max-width: 500px) {
-          flex-direction: row;
-          justify-content: space-around;
-        }
       }
 
       svg {
-        width: 70px;
-
-        @media screen and (max-width: 500px) {
-          width: 100%;
-        }
+        width: 90px;
       }
 
       p {
@@ -337,6 +327,7 @@
 
       @media screen and (max-width: 768px) {
         font-size: 18px;
+        line-height: 25px;
       }
     }
 
@@ -345,16 +336,11 @@
 
       @media screen and (max-width: 768px) {
         margin-top: 20px;
-        max-width: 500px;
-        display: flex;
-        overflow-y: auto;
       }
 
       @media screen and (max-width: 500px) {
         margin-top: 20px;
         max-width: 400px;
-        display: flex;
-        overflow-y: auto;
       }
 
       li {
@@ -369,6 +355,7 @@
           font-size: 20px;
           margin-right: 15px;
           padding-bottom: 10px;
+          line-height: 25px;
         }
       }
     }
@@ -422,6 +409,10 @@
     font-family: "Montserrat";
     font-size: 36px;
     font-weight: 700;
+
+    @media screen and (max-width: 768px) {
+      font-size: 28px;
+    }
   }
 
   &-text {
@@ -435,6 +426,8 @@
 
     @media screen and (max-width: 768px) {
       width: 90%;
+      font-size: 18px;
+      line-height: 25px;
     }
   }
 
@@ -452,14 +445,10 @@
     &__list {
       width: 50%;
 
-      @media screen and (max-width: 500px) {
-        max-width: 300px;
-      }
       @media screen and (max-width: 768px) {
-        width: 500px;
-
+        width: 100%;
         display: flex;
-        overflow-y: auto;
+        flex-direction: column;
       }
 
       li {
@@ -468,8 +457,10 @@
         font-weight: 500;
         padding: 20px 0 20px 30px;
 
-        @media screen and (max-width: 768px) {
-          padding: 0 10px;
+        @media screen and (max-width: 500px) {
+          padding: 10px;
+          margin-top: 10px;
+          font-size: 16px;
         }
 
         p {
@@ -482,7 +473,7 @@
         border-radius: 10px 0 0 10px;
 
         @media screen and (max-width: 768px) {
-          background-color: transparent;
+          border-radius: 10px;
         }
       }
     }
@@ -497,6 +488,10 @@
         font-family: "Montserrat";
         font-size: 32px;
         font-weight: 700;
+
+        @media screen and (max-width: 500px) {
+          font-size: 28px;
+        }
       }
 
       @media screen and (max-width: 768px) {
@@ -515,6 +510,7 @@
 
         @media screen and (max-width: 768px) {
           width: 100%;
+          font-size: 18px;
         }
       }
 
@@ -542,10 +538,14 @@
     font-family: "Montserrat";
     font-size: 36px;
     font-weight: 700;
+
+    @media screen and (max-width: 768px) {
+      font-size: 28px;
+    }
   }
 
   &-logo {
-    margin-top: 90px;
+    margin-top: 60px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -557,17 +557,27 @@
     }
 
     @media screen and (max-width: 500px) {
-      overflow-y: auto;
-      overflow-wrap: normal;
+      margin-top: 20px;
       padding: 30px 0;
     }
 
     &__img {
+      margin-bottom: 30px;
       padding: 25px 140px;
       border-radius: 5px;
       box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+      @media screen and (max-width: 500px) {
+        margin-bottom: 15px;
+        padding: 20px 100px;
+      }
+
       img {
         width: 96px;
+
+        @media screen and (max-width: 500px) {
+          width: 60px;
+        }
       }
     }
   }
@@ -584,6 +594,10 @@
     font-family: "Montserrat";
     font-size: 36px;
     font-weight: 700;
+
+    @media screen and (max-width: 768px) {
+      font-size: 28px;
+    }
   }
 
   .swiper {
@@ -661,7 +675,8 @@
     justify-content: space-evenly;
   }
   @media screen and (max-width: 768px) {
-    height: 320px;
+    height: fit-content;
+    padding-bottom: 50px;
   }
 
   &-content {
@@ -684,6 +699,7 @@
       font-weight: 700;
 
       @media screen and (max-width: 768px) {
+        font-size: 28px;
         margin-top: 20px;
       }
     }
@@ -695,6 +711,11 @@
       line-height: 38px;
       margin-top: 20px;
       color: rgba(0, 0, 0, 0.5);
+
+      @media screen and (max-width: 500px) {
+        font-size: 18px;
+        line-height: 25px;
+      }
     }
 
     &__btn {
