--- a/css/labaratory.css
+++ b/css/labaratory.css
@@ -160,7 +160,7 @@ button {
 }
 @media screen and (max-width: 1100px) {
   .header-links {
-    display: none;
+    flex-direction: column-reverse;
   }
 }
 .header-links .navigation-links {
