--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -122,7 +122,7 @@
   transition: top 1s linear;
 
   @media screen and (max-width: 1100px) {
-    display: none;
+    flex-direction: column-reverse;
   }
 
   .navigation-links {
