--- a/css/sales.css
+++ b/css/sales.css
@@ -53,8 +53,9 @@ button {
   align-items: center;
   justify-content: space-between;
   padding: 20px 0;
+  overflow: auto;
 }
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1100px) {
   .header {
     padding: 15px 0;
   }
@@ -65,13 +66,13 @@ button {
 .header-logo img {
   width: 100%;
 }
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1100px) {
   .header-logo img {
     width: 80px;
   }
 }
 .header-contact {
-  font-family: Montserrat;
+  font-family: "Montserrat";
   font-size: 20px;
   font-weight: bold;
   color: #01a1b7;
@@ -86,8 +87,28 @@ button {
 .header-contact p {
   margin-bottom: 5px;
 }
-.header-buttons {
-  height: 100%;
+@media screen and (max-width: 1100px) {
+  .header .show-contact {
+    display: block flex;
+    position: absolute;
+    width: 90%;
+    transform: translateY(390px);
+    justify-content: space-between;
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  .header .show-contact {
+    transform: translateY(510px);
+  }
+}
+@media screen and (max-width: 500px) {
+  .header .show-contact {
+    transform: translateY(440px);
+    font-size: 16px;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 @media screen and (max-width: 1400px) {
   .header-buttons {
@@ -113,6 +134,42 @@ button {
   .header-buttons a {
     margin-top: 5px;
     text-align: center;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .header .show-buttons {
+    width: 90%;
+    display: block flex;
+    position: absolute;
+    transform: translateY(340px);
+    justify-content: space-between;
+    align-items: center;
+  }
+  .header .show-buttons a {
+    flex-shrink: 0;
+    margin-left: 0;
+    margin-top: 5px;
+    font-size: 14px;
+    padding: 10px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .header .show-buttons {
+    flex-direction: column;
+    margin-top: 30px;
+    align-items: flex-start;
+    width: 95%;
+  }
+  .header .show-buttons a {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .header .show-buttons {
+    transform: translateY(300px);
+  }
+  .header .show-buttons a {
+    padding: 5px;
   }
 }
 .header-mobicon {
@@ -141,6 +198,11 @@ button {
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   z-index: 99;
 }
+@media screen and (max-width: 1100px) {
+  .header-links__wrapper {
+    width: 90%;
+  }
+}
 
 .sticky {
   position: fixed;
@@ -160,7 +222,7 @@ button {
 }
 @media screen and (max-width: 1100px) {
   .header-links {
-    flex-direction: column-reverse;
+    display: none;
   }
 }
 .header-links .navigation-links {
@@ -215,8 +277,9 @@ button {
 }
 @media screen and (max-width: 1100px) {
   .header-links .navigation-input {
-    margin-top: 10px;
-    margin-left: 0;
+    position: absolute;
+    top: 0;
+    left: 10px;
   }
 }
 .header-links .navigation-input img {
@@ -266,7 +329,15 @@ button {
 }
 @media screen and (max-width: 1100px) {
   .header-links .navigation-language {
-    margin-top: 10px;
+    position: absolute;
+    top: 10px;
+    left: 250px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .header-links .navigation-language {
+    font-size: 16px;
+    left: 160px;
   }
 }
 .header-links .navigation-language img {
@@ -277,22 +348,54 @@ button {
 .open-menu {
   position: fixed;
   width: 100%;
+  height: 100%;
   top: 0;
   margin-top: 75px;
   background-color: #ffffff;
-  height: 100vh;
+  height: 120vh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  transition: all 1s ease-in-out;
 }
 .open-menu .navigation-links {
-  margin-left: 20px;
+  margin-top: 30px;
+  margin-left: 30px;
+}
+@media screen and (max-width: 500px) {
+  .open-menu .navigation-links {
+    margin-left: 15px;
+  }
 }
 .open-menu .navigation-links li {
-  margin-top: 20px;
+  font-size: 16px;
+  margin-top: 10px;
+}
+@media screen and (max-width: 500px) {
+  .open-menu .navigation-links li {
+    margin-top: 5px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .open-menu .navigation-input {
+    left: 0;
+  }
 }
 .open-menu .navigation-input input {
   width: 200px;
+}
+@media screen and (max-width: 500px) {
+  .open-menu .navigation-input input {
+    width: 150px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .open-menu .navigation-input input::-moz-placeholder {
+    font-size: 12px;
+  }
+  .open-menu .navigation-input input::placeholder {
+    font-size: 12px;
+  }
 }
 
 .footer-wrapper {
@@ -569,6 +672,11 @@ button {
   font-family: "Montserrat" sans-serif;
   font-size: 16px;
   font-weight: 500;
+}
+@media screen and (max-width: 1100px) {
+  .sales-page__title {
+    margin-top: 100px;
+  }
 }
 .sales-page__title img {
   margin-right: 10px;
