--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -16,8 +16,9 @@
   align-items: center;
   justify-content: space-between;
   padding: 20px 0;
+  overflow: auto;
 
-  @media screen and (max-width: 1024px) {
+  @media screen and (max-width: 1100px) {
     padding: 15px 0;
   }
 
@@ -27,14 +28,14 @@
     img {
       width: 100%;
 
-      @media screen and (max-width: 1024px) {
+      @media screen and (max-width: 1100px) {
         width: 80px;
       }
     }
   }
 
   &-contact {
-    font-family: Montserrat;
+    font-family: "Montserrat";
     font-size: 20px;
     font-weight: bold;
     color: #01a1b7;
@@ -50,9 +51,30 @@
     }
   }
 
-  &-buttons {
-    height: 100%;
+  .show-contact {
+    @media screen and (max-width: 1100px) {
+      display: block flex;
+      position: absolute;
+      width: 90%;
+      transform: translateY(390px);
+      justify-content: space-between;
+      margin-left: 0;
+    }
 
+    @media screen and (max-width: 768px) {
+      transform: translateY(510px);
+    }
+
+    @media screen and (max-width: 500px) {
+      transform: translateY(440px);
+      font-size: 16px;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  &-buttons {
+    
     @media screen and (max-width: 1400px) {
       display: grid;
       grid-template-columns: auto auto;
@@ -74,6 +96,44 @@
       @media screen and (max-width: 1400px) {
         margin-top: 5px;
         text-align: center;
+      }
+    }
+  }
+
+  .show-buttons {
+    @media screen and (max-width: 1100px) {
+      width: 90%;
+      display: block flex;
+      position: absolute;
+      transform: translateY(340px);
+      justify-content: space-between;
+      align-items: center;
+
+      a {
+        flex-shrink: 0;
+        margin-left: 0;
+        margin-top: 5px;
+        font-size: 14px;
+        padding: 10px;
+      }
+    }
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      margin-top: 30px;
+      align-items: flex-start;
+      width: 95%;
+
+      a {
+        width: 100%;
+      }
+    }
+
+    @media screen and (max-width: 500px) {
+      transform: translateY(300px);
+
+      a {
+        padding: 5px;
       }
     }
   }
@@ -103,6 +163,10 @@
   background-color: #ffffff;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   z-index: 99;
+
+  @media screen and (max-width: 1100px) {
+    width: 90%;
+  }
 }
 
 .sticky {
@@ -122,7 +186,7 @@
   transition: top 1s linear;
 
   @media screen and (max-width: 1100px) {
-    flex-direction: column-reverse;
+    display: none;
   }
 
   .navigation-links {
@@ -181,8 +245,9 @@
     padding: 5px;
 
     @media screen and (max-width: 1100px) {
-      margin-top: 10px;
-      margin-left: 0;
+      position: absolute;
+      top: 0;
+      left: 10px;
     }
 
     img {
@@ -228,7 +293,14 @@
     font-weight: 500;
 
     @media screen and (max-width: 1100px) {
-      margin-top: 10px;
+      position: absolute;
+      top: 10px;
+      left: 250px;
+    }
+
+    @media screen and (max-width: 500px) {
+      font-size: 16px;
+      left: 160px;
     }
 
     img {
@@ -239,29 +311,53 @@
 }
 
 .open-menu {
-  // display: block;
   position: fixed;
   width: 100%;
-
+  height: 100%;
   top: 0;
   margin-top: 75px;
   background-color: #ffffff;
-  height: 100vh;
+  height: 120vh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  transition: all 1s ease-in-out;
 
   .navigation-links {
-    margin-left: 20px;
+    margin-top: 30px;
+    margin-left: 30px;
+
+    @media screen and (max-width: 500px) {
+      margin-left: 15px;
+    }
 
     li {
-      margin-top: 20px;
+      font-size: 16px;
+      margin-top: 10px;
+
+      @media screen and (max-width: 500px) {
+        margin-top: 5px;
+      }
     }
   }
 
   .navigation-input {
+    @media screen and (max-width: 500px) {
+      left: 0;
+    }
+
     input {
       width: 200px;
+
+      @media screen and (max-width: 500px) {
+        width: 150px;
+      }
+
+      &::placeholder {
+        @media screen and (max-width: 500px) {
+          font-size: 12px;
+        }
+      }
     }
   }
 }
