--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -10,6 +10,10 @@
   font-size: 16px;
   font-weight: 500;
 
+  @media screen and (max-width: 1100px) {
+    margin-top: 100px;
+  }
+
   img {
     margin-right: 10px;
   }
@@ -312,6 +316,8 @@
         border: 2px solid #000;
         padding: 5px 20px;
         border-radius: 10px;
+        display: flex;
+        align-items: center;
 
         @media screen and (max-width: 500px) {
           padding: 10px;
