--- a/scss/cooperation.scss
+++ b/scss/cooperation.scss
@@ -10,6 +10,10 @@
   font-size: 16px;
   font-weight: 500;
 
+  @media screen and (max-width: 1100px) {
+    margin-top: 100px;
+  }
+
   img {
     margin-right: 10px;
   }
