--- a/scss/feedback.scss
+++ b/scss/feedback.scss
@@ -3,12 +3,16 @@
 @import "footer";
 
 .feedback-page__title {
-  margin-top: 30px;
+  margin-top: 40px;
   display: flex;
   align-items: flex-start;
   font-family: "Montserrat" sans-serif;
   font-size: 16px;
   font-weight: 500;
+
+  @media screen and (max-width: 1100px) {
+    margin-top: 100px;
+  }
 
   img {
     margin-right: 10px;
@@ -223,6 +227,11 @@
         font-size: 16px;
         font-weight: 500;
         cursor: pointer;
+        display: flex;
+
+        svg{
+          margin-right: 5px;
+        }
 
         @media screen and (max-width: 500px) {
           padding: 20px 30px;
@@ -231,11 +240,16 @@
     }
 
     &__file {
-      font-size: 16px;
+      font-size: 20px;
       line-height: 20px;
       border: 2px solid #000;
       margin: 0 0 0 20px;
       padding: 5px 20px;
+      display: flex;
+
+      svg{
+        margin-top: 5px;
+      }
 
       @media screen and (max-width: 500px) {
         margin-top: 20px;
