--- a/scss/sales.scss
+++ b/scss/sales.scss
@@ -11,6 +11,10 @@
   font-size: 16px;
   font-weight: 500;
 
+  @media screen and (max-width: 1100px) {
+    margin-top: 100px;
+  }
+
   img {
     margin-right: 10px;
     display: inline;
