--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -254,6 +254,7 @@
         height: 56px;
         margin-top: 15px;
         font-size: 18px;
+        font-weight: 600;
 
         &::placeholder {
           opacity: 0.7;
