--- a/css/feedback.css
+++ b/css/feedback.css
@@ -838,6 +838,7 @@ button {
   border: none;
   box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.2);
   font-size: 18px;
+  font-weight: 600;
 }
 .form-input input::-moz-placeholder {
   opacity: 0.7;
