--- a/scss/feedback.scss
+++ b/scss/feedback.scss
@@ -174,6 +174,7 @@
       border: none;
       box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.2);
       font-size: 18px;
+      font-weight: 600;
 
       &::placeholder {
         opacity: 0.7;
@@ -229,7 +230,7 @@
         cursor: pointer;
         display: flex;
 
-        svg{
+        svg {
           margin-right: 5px;
         }
 
@@ -247,7 +248,7 @@
       padding: 5px 20px;
       display: flex;
 
-      svg{
+      svg {
         margin-top: 5px;
       }
 
