--- a/css/about-us-page.css
+++ b/css/about-us-page.css
@@ -262,8 +262,10 @@ button {
   background: #f4c93f;
   transition: all 0.5s ease-in-out;
 }
-.header-links .navigation-links li .menu-link::before {
-  transition: all 0.5s ease-in-out;
+@media screen and (max-width: 1100px) {
+  .header-links .navigation-links li .menu-link::before {
+    display: none;
+  }
 }
 .header-links .navigation-links li:hover a {
   color: #01a1b7;
@@ -348,7 +350,7 @@ button {
 .open-menu {
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 0;
   margin-top: 75px;
   background-color: #ffffff;
