--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -222,11 +222,11 @@
           height: 3px;
           background: #f4c93f;
           transition: all 0.5s ease-in-out;
-        }
-      }
 
-      .menu-link::before {
-        transition: all 0.5s ease-in-out;
+          @media screen and (max-width: 1100px) {
+            display: none;
+          }
+        }
       }
 
       &:hover a {
@@ -312,7 +312,7 @@
 .open-menu {
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 0;
   margin-top: 75px;
   background-color: #ffffff;
