--- a/css/cooperation.css
+++ b/css/cooperation.css
@@ -251,7 +251,7 @@ button {
 .header-links .navigation-links li .menu-link {
   position: relative;
   padding-bottom: 7px;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 .header-links .navigation-links li .menu-link::before {
   content: "";
@@ -260,7 +260,7 @@ button {
   width: 0;
   height: 3px;
   background: #f4c93f;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.3s ease;
 }
 @media screen and (max-width: 1100px) {
   .header-links .navigation-links li .menu-link::before {
