--- a/css/feedback.css
+++ b/css/feedback.css
@@ -251,7 +251,7 @@ button {
 .header-links .navigation-links li .menu-link {
   position: relative;
   padding-bottom: 7px;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 .header-links .navigation-links li .menu-link::before {
   content: "";
@@ -260,7 +260,7 @@ button {
   width: 0;
   height: 3px;
   background: #f4c93f;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.3s ease;
 }
 @media screen and (max-width: 1100px) {
   .header-links .navigation-links li .menu-link::before {
@@ -840,7 +840,8 @@ button {
   border: none;
   box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.2);
   font-size: 18px;
-  font-weight: 600;
+  font-weight: 500;
+  outline: none;
 }
 .form-input input::-moz-placeholder {
   opacity: 0.7;
@@ -888,7 +889,7 @@ button {
 .form-button__submit button {
   background: #f4c93f;
   border-radius: 10px;
-  padding: 10px 25px;
+  padding: 15px 25px;
   border: none;
   font-weight: 500;
   font-size: 16px;
