--- a/css/home-page.css
+++ b/css/home-page.css
@@ -251,7 +251,7 @@ button {
 .header-links .navigation-links li .menu-link {
   position: relative;
   padding-bottom: 7px;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 .header-links .navigation-links li .menu-link::before {
   content: "";
@@ -260,7 +260,7 @@ button {
   width: 0;
   height: 3px;
   background: #f4c93f;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.3s ease;
 }
 @media screen and (max-width: 1100px) {
   .header-links .navigation-links li .menu-link::before {
@@ -1035,7 +1035,7 @@ button {
     max-width: 400px;
   }
 }
-.specialists-wrapper .specialists-types li {
+.specialists-wrapper .specialists-types .list-item {
   font-family: Montserrat;
   font-size: 24px;
   font-size: 24px;
@@ -1044,12 +1044,15 @@ button {
   cursor: pointer;
 }
 @media screen and (max-width: 768px) {
-  .specialists-wrapper .specialists-types li {
+  .specialists-wrapper .specialists-types .list-item {
     font-size: 20px;
     margin-right: 15px;
     padding-bottom: 10px;
     line-height: 25px;
   }
+}
+.specialists-wrapper .specialists-types .active {
+  color: blue;
 }
 .specialists-wrapper .specialists-image {
   width: 100%;
@@ -1148,6 +1151,7 @@ button {
   font-size: 20px;
   font-weight: 500;
   padding: 20px 0 20px 30px;
+  cursor: pointer;
 }
 @media screen and (max-width: 500px) {
   .advantages-content__list li {
