--- a/css/sales.css
+++ b/css/sales.css
@@ -251,7 +251,7 @@ button {
 .header-links .navigation-links li .menu-link {
   position: relative;
   padding-bottom: 7px;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 .header-links .navigation-links li .menu-link::before {
   content: "";
@@ -260,7 +260,7 @@ button {
   width: 0;
   height: 3px;
   background: #f4c93f;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.3s ease;
 }
 @media screen and (max-width: 1100px) {
   .header-links .navigation-links li .menu-link::before {
@@ -810,7 +810,7 @@ button {
   align-items: center;
   flex-wrap: wrap;
 }
-.sales-cards .filter-buttons .button {
+.sales-cards .filter-buttons .filter-btn {
   padding: 10px 20px;
   border-radius: 10px;
   border: 3px solid rgba(0, 0, 0, 0.2);
@@ -823,7 +823,7 @@ button {
   color: rgba(0, 0, 0, 0.6);
 }
 @media screen and (max-width: 768px) {
-  .sales-cards .filter-buttons .button {
+  .sales-cards .filter-buttons .filter-btn {
     font-size: 16px;
     padding: 5px 10px;
   }
@@ -883,10 +883,20 @@ button {
 .cards-wrapper .card {
   margin-top: 30px;
   width: 49%;
-  height: 555px;
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background: #ffffff;
   border-radius: 10px;
   box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.08);
+}
+@media screen and (max-width: 1100px) {
+  .cards-wrapper .card {
+    min-height: -moz-fit-content;
+    min-height: fit-content;
+  }
 }
 @media screen and (max-width: 768px) {
   .cards-wrapper .card {
@@ -910,6 +920,7 @@ button {
   padding: 20px 40px 0;
   display: flex;
   justify-content: space-between;
+  margin-bottom: auto;
 }
 @media screen and (max-width: 1100px) {
   .cards-wrapper .card-title {
@@ -956,6 +967,8 @@ button {
   font-size: 14px;
   font-weight: 500;
   line-height: 22px;
+  display: flex;
+  flex-direction: column;
 }
 @media screen and (max-width: 1100px) {
   .cards-wrapper .card-text {
@@ -969,6 +982,9 @@ button {
 }
 .cards-wrapper .card-text p {
   margin-top: 20px;
+}
+.cards-wrapper .card-text p:nth-child(2) {
+  margin-bottom: auto;
 }
 @media screen and (max-width: 768px) {
   .cards-wrapper .card-text p {
