--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -212,7 +212,7 @@
       .menu-link {
         position: relative;
         padding-bottom: 7px;
-        transition: all 0.5s ease-in-out;
+        transition: all 0.2s ease-in-out;
 
         &::before {
           content: "";
@@ -221,7 +221,7 @@
           width: 0;
           height: 3px;
           background: #f4c93f;
-          transition: all 0.5s ease-in-out;
+          transition: all 0.3s ease;
 
           @media screen and (max-width: 1100px) {
             display: none;
