--- a/scss/feedback.scss
+++ b/scss/feedback.scss
@@ -174,7 +174,8 @@
       border: none;
       box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.2);
       font-size: 18px;
-      font-weight: 600;
+      font-weight: 500;
+      outline: none;
 
       &::placeholder {
         opacity: 0.7;
@@ -222,7 +223,7 @@
       button {
         background: #f4c93f;
         border-radius: 10px;
-        padding: 10px 25px;
+        padding: 15px 25px;
         border: none;
         font-weight: 500;
         font-size: 16px;
