--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -279,11 +279,11 @@
         align-items: center;
         justify-content: space-evenly;
       }
-      
+
       svg {
         width: 90px;
       }
-      
+
       p {
         font-weight: bold;
         width: 50%;
@@ -358,7 +358,7 @@
         max-width: 400px;
       }
 
-      li {
+      .list-item {
         font-family: Montserrat;
         font-size: 24px;
         font-size: 24px;
@@ -372,6 +372,9 @@
           padding-bottom: 10px;
           line-height: 25px;
         }
+      }
+      .active {
+        color: blue;
       }
     }
   }
@@ -471,6 +474,7 @@
         font-size: 20px;
         font-weight: 500;
         padding: 20px 0 20px 30px;
+        cursor: pointer;
 
         @media screen and (max-width: 500px) {
           padding: 10px;
