--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -45,11 +45,13 @@
         font-size: 50px;
         line-height: 60px;
       }
+
       @media screen and (max-width: 768px) {
         width: 90%;
         font-size: 36px;
         line-height: 40px;
       }
+
       @media screen and (max-width: 500px) {
         font-size: 30px;
       }
@@ -81,6 +83,7 @@
       @media screen and (max-width: 1400px) {
         margin-top: 100px;
       }
+
       @media screen and (max-width: 768px) {
         width: 100%;
         margin-top: 20px;
@@ -114,6 +117,7 @@
         @media screen and (max-width: 1400px) {
           width: 200px;
         }
+
         @media screen and (max-width: 768px) {
           width: 100px;
           margin: 0 10px;
@@ -265,6 +269,7 @@
       @media screen and (max-width: 768px) {
         margin-bottom: 20px;
       }
+
       @media screen and (max-width: 500px) {
         width: 100%;
         text-align: center;
@@ -316,6 +321,7 @@
   @media screen and (max-width: 768px) {
     flex-direction: column;
     margin-top: 50px;
+    align-items: flex-start;
   }
 
   .specialists {
@@ -328,6 +334,7 @@
         font-size: 25px;
       }
     }
+
     &-text {
       font-family: "Montserrat";
       font-size: 24px;
@@ -361,6 +368,7 @@
         font-weight: 500;
         line-height: 49px;
         cursor: pointer;
+        width: max-content;
 
         @media screen and (max-width: 768px) {
           font-size: 20px;
@@ -368,7 +376,12 @@
           padding-bottom: 10px;
           line-height: 25px;
         }
+
+        &:hover {
+          color: #01a1b7;
+        }
       }
+
       .active {
         color: blue;
       }
@@ -376,6 +389,7 @@
   }
 
   .specialists-image {
+    top: 100px;
     width: 100%;
     height: 0;
     align-self: center;
@@ -385,13 +399,13 @@
 
     @media screen and (max-width: 768px) {
       width: 90%;
-      margin-top: 20px;
+      top: 30px;
     }
 
     img {
       position: absolute;
       left: 0;
-      top: 100px;
+
       width: 100%;
       height: 70%;
       object-fit: cover;
@@ -447,7 +461,7 @@
     font-size: 24px;
     font-weight: 500;
     line-height: 38px;
-    width: 35%;
+    width: 50%;
     margin-top: 20px;
     color: rgba(0, 0, 0, 0.5);
 
@@ -508,8 +522,8 @@
 
     &__text {
       position: relative;
-      width: 65%;
-      padding: 50px 30px 0 30px;
+      width: 80%;
+      padding: 20px 30px 0 30px;
       background-color: #ffffff;
 
       h1 {
@@ -536,7 +550,7 @@
         line-height: 31px;
         margin-top: 20px;
 
-        @media screen and (max-width: 768px) {
+        @media screen and (max-width: 1024px) {
           width: 100%;
           font-size: 18px;
         }
@@ -577,7 +591,7 @@
   &-slide {
     display: inline-block;
     margin-top: 60px;
-    animation: 30s slide infinite linear;
+    animation: 25s slide infinite linear;
 
     @media screen and (max-width: 768px) {
       margin-top: 50px;
@@ -616,6 +630,7 @@
   from {
     transform: translateX(0);
   }
+
   to {
     transform: translateX(-100%);
   }
@@ -657,12 +672,13 @@
       }
     }
 
-    .swiper-horizontal > .swiper-pagination-bullets,
+    .swiper-horizontal>.swiper-pagination-bullets,
     .swiper-pagination-bullets.swiper-pagination-horizontal,
     .swiper-pagination-custom,
     .swiper-pagination-fraction {
       bottom: var(--swiper-pagination-bottom, 20px);
     }
+
     &-button-prev,
     &-button-next {
       color: #000000;
@@ -691,6 +707,7 @@
   @media screen and (max-width: 768px) {
     margin-top: 50px;
   }
+
   @media screen and (max-width: 500px) {
     margin-top: 30px;
   }
@@ -704,6 +721,7 @@
   @media screen and (max-width: 1100px) {
     justify-content: space-evenly;
   }
+
   @media screen and (max-width: 768px) {
     height: fit-content;
     padding-bottom: 50px;
