--- a/scss/sales.scss
+++ b/scss/sales.scss
@@ -10,6 +10,7 @@
   font-family: "Montserrat" sans-serif;
   font-size: 16px;
   font-weight: 500;
+  position: relative;
 
   @media screen and (max-width: 1100px) {
     margin-top: 100px;
@@ -21,7 +22,8 @@
   }
 
   .page-title {
-    margin-top: 30px;
+    position: absolute;
+    margin-top: 50px;
     font-size: 36px;
     font-family: "Montserrat" sans-serif;
     font-weight: 700;
@@ -36,7 +38,7 @@
 .sales-main {
   display: flex;
   padding: 30px 0 40px;
-  margin-top: 50px;
+  margin-top: 125px;
 
   @media screen and (max-width: 768px) {
     padding: 20px 0;
