--- a/css/about-us-page.css
+++ b/css/about-us-page.css
@@ -372,7 +372,7 @@ button {
 .header-links .navigation-language .other-languages a {
   display: flex;
   align-items: center;
-  padding-bottom: 5px;
+  padding-bottom: 10px;
 }
 .header-links .navigation-language .other-languages a img {
   margin: 0 5px;
@@ -928,6 +928,7 @@ button {
   margin-bottom: 15px;
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 @media screen and (max-width: 768px) {
   .advantages-content .card {
@@ -1203,26 +1204,33 @@ button {
     font-size: 24px;
   }
 }
-.recomendation-card {
-  margin-top: 70px;
+.recomendation .slide-content {
+  width: 90%;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px 10px;
+  margin-bottom: 30px;
+}
+.recomendation .slide-content .card-wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 20px 0;
 }
 @media screen and (max-width: 1100px) {
-  .recomendation-card {
+  .recomendation .slide-content .card-wrapper {
     margin-top: 30px;
   }
 }
 @media screen and (max-width: 768px) {
-  .recomendation-card {
+  .recomendation .slide-content .card-wrapper {
     flex-direction: column;
     margin-top: 10px;
   }
 }
-.recomendation .card {
+.recomendation .slide-content .card-wrapper .card {
   width: 32%;
-  margin-top: 30px;
   padding: 30px 30px 50px;
   display: flex;
   flex-direction: column;
@@ -1230,25 +1238,25 @@ button {
   justify-content: center;
   border-radius: 10px;
   background: #fff;
-  box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.08);
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 @media screen and (max-width: 768px) {
-  .recomendation .card {
+  .recomendation .slide-content .card-wrapper .card {
     width: 80%;
   }
 }
 @media screen and (max-width: 500px) {
-  .recomendation .card {
+  .recomendation .slide-content .card-wrapper .card {
     width: 95%;
   }
 }
-.recomendation .card-name {
+.recomendation .slide-content .card-wrapper .card-name {
   font-family: "Montserrat" sans-serif;
   font-size: 16px;
   font-weight: 700;
   margin-top: 20px;
 }
-.recomendation .card-line {
+.recomendation .slide-content .card-wrapper .card-line {
   margin-top: 15px;
   margin-bottom: 15px;
   display: block;
@@ -1256,7 +1264,7 @@ button {
   height: 1px;
   background: rgba(0, 0, 0, 0.1);
 }
-.recomendation .card-text {
+.recomendation .slide-content .card-wrapper .card-text {
   width: 85%;
   margin-top: 50px;
   text-align: center;
@@ -1265,38 +1273,10 @@ button {
   font-weight: 500;
   line-height: 22px;
 }
-.recomendation .place-for-pagination {
-  margin-top: 100px;
-  display: flex;
-  align-items: center;
-  color: #000000;
-  cursor: pointer;
-}
-@media screen and (max-width: 1100px) {
-  .recomendation .place-for-pagination {
-    margin-top: 50px;
-  }
-}
-.recomendation .place-for-pagination svg path {
-  stroke: #000000;
-}
-.recomendation .place-for-pagination p {
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  font-size: 24px;
-  font-weight: 500;
-}
-.recomendation .place-for-pagination .line {
+.recomendation .swiper-button-lock {
   display: block;
-  width: 300px;
-  height: 2px;
-  background: #000000;
-  margin-left: 15px;
-  margin-right: 15px;
 }
-@media screen and (max-width: 500px) {
-  .recomendation .place-for-pagination .line {
-    width: 100px;
-  }
+.recomendation .swiper-button-next,
+.recomendation .swiper-button-prev {
+  font-weight: bold;
 }/*# sourceMappingURL=about-us-page.css.map */
